feat: group the CVE report by Dependency-Track project (#139)
* docs: design for Dependency-Track project attribution in the CVE report

* docs: record that clean projects are absent from the CVE report by design

* docs: comment on the CVE ticket when the repository goes clean

* docs: implementation plan for CVE report project attribution

* docs: fix test-compilation ordering in the CVE attribution plan

* feat: rank Dependency-Track severities for CVE report ordering

* feat: carry the Dependency-Track project through CVE findings

* fix: tolerate null vulnerability ids in ComponentFindings.group()

* feat: render the CVE report grouped by Dependency-Track project

* fix: cover advisories join and render placeholder for unidentified CVE ids

* refactor: render the CVE report through CveReportRenderer

* feat: let a Linear producer comment without ever creating an issue

* fix: clear stale issue refs and align dry-run for comment-only filings

* feat: read whether the previous CVE scan found anything

* feat: comment on the CVE report when the repository goes clean

* docs: record project-grouped CVE reporting in the cvefix runbook

* fix: never mistake a failed CVE scan for a clean previous one

CveFixRunRepository.findFirstByIdNotOrderByStartedAtDesc returned the
newest run regardless of status, so a run that died before
fetchFindings (e.g. Dependency-Track's shared Postgres going down) was
recorded FAILED with findingsSeen == 0 - indistinguishable from a
genuinely clean scan. Once that row became "the previous run", the
dirty-to-clean transition comment could never fire again, since every
later clean run also reports findingsSeen == 0.

Replace it with findFirstByIdNotAndStatusInOrderByStartedAtDesc,
restricted to COMPLETED and NO_FINDINGS - the only statuses reached
after fetchFindings returns - so a failed run is skipped and the
search falls back to the last run that actually observed
Dependency-Track, dirty or clean.

* fix: keep CVE scan progress accurate 